# last-monitor

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  ONBOARDING.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
crates/agent/: Cargo.toml
crates/agent/src/: collect.rs  main.rs  push.rs  tunnel.rs
crates/hub/: Cargo.toml  build.rs
crates/shared/: Cargo.toml
deploy/: Dockerfile.agent  Dockerfile.hub  README.md  agent.compose.yml  build-css.sh  init-db.sh  last-agent.service  shot.py
deploy/agent/: Chart.yaml  values.yaml
deploy/chart/: Chart.yaml  values.yaml
deploy/k8s/: agent.yaml
docs/: API.md  README.md  ROADMAP.md  auth-2fa-passkey.md  exec-design.md  exposure.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  main.js  style.css
migrations/config/: 0001_init.sql  0002_sessions.sql  0003_alert_state.sql  0004_namespace_name.sql  0005_monitor_debug.sql  0005_server_meta.sql  0006_tokens.sql  0008_audit.sql  0011_backup_schedule.sql  0012_alert_multichannel.sql  0013_audit_object.sql  0016_audit_retention.sql  0018_exec_per_user_keys.sql  0019_ssh_keys.sql  (+5 more)
scripts/: check-2fa.sh  check-alerts.sh  check-audit.sh  check-backup.sh  check-ci.sh  check-dev-stack.sh  check-fleet.sh  check-master-key.sh  check-mcp.sh  check-no-blank.sh  check-ns-rule.sh  check-pat.sh  check-release.sh  check-spa.sh  check-systems.sh  check-upgrades.sh  dev-hub.sh  disk-cleanup.sh  rotate-app-secret.sh  run-agent.sh  sim-agents.mjs
web/: input.css  tailwind.config.js
(+138 files in other folders)
